log
Fri 17 Mar 2023 12:27:37 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cc56b71
Fri 17 Mar 2023 12:30:53 AM UTC: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
2c2b880
Fri 17 Mar 2023 12:34:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
e1c59a6
Fri 17 Mar 2023 12:35:06 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
42cb5f6
Fri 17 Mar 2023 12:36:16 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
4844890
Fri 17 Mar 2023 12:38:57 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:109:15: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  109 |   c[i] = a[i] + b[i];
      |          ~~~~ ^ ~~~~
      |           |      |
      |           Vector Vector
Compilation failed
f342484
Fri 17 Mar 2023 12:40:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
dc48d17
Fri 17 Mar 2023 05:31:52 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:120:9: error: passing argument 1 of ‘sumaV’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  120 |   sumaV(a,b,c);
      |         ^
      |         |
      |         int *
exercises.c:107:21: note: expected ‘Vector *’ but argument is of type ‘int *’
  107 | void sumaV(Vector * a, Vector * b, Vector * c) {
      |            ~~~~~~~~~^
exercises.c:120:11: error: passing argument 2 of ‘sumaV’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  120 |   sumaV(a,b,c);
      |           ^
      |           |
      |           int *
exercises.c:107:33: note: expected ‘Vector *’ but argument is of type ‘int *’
  107 | void sumaV(Vector * a, Vector * b, Vector * c) {
      |                        ~~~~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
984c92d
Fri 17 Mar 2023 05:33:24 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:119:17: error: expected expression before ‘{’ token
  119 |   a->datos[2] = {a1,a2};
      |                 ^
exercises.c:120:17: error: expected expression before ‘{’ token
  120 |   b->datos[2] = {b1,b2};
      |                 ^
Compilation failed
95766a9
Fri 17 Mar 2023 05:36:57 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:121:14: error: expected expression before ‘{’ token
  121 |   a->datos = {a1,a2};
      |              ^
exercises.c:122:14: error: expected expression before ‘{’ token
  122 |   b->datos = {b1,b2};
      |              ^
Compilation failed
ac68dea
